welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:33: error: value unary_! is not a member of Unit
}while(!setPos(4,6))	
       ^